@@ -55,6 +55,8 @@ public abstract class IconLibrary {
     public static final DcImageIcon _icoPersons = new DcImageIcon(picPath + "persons.png");
     public static final DcImageIcon _icoModuleTypeProperty16 = new DcImageIcon(picPath + "property16.png");
     public static final DcImageIcon _icoModuleTypeProperty32 = new DcImageIcon(picPath + "property32.png");
+    public static final DcImageIcon _icoTeam16 = new DcImageIcon(picPath + "team16.png");
+    public static final DcImageIcon _icoTeam32 = new DcImageIcon(picPath + "team32.png");
     public static final DcImageIcon _icoModuleTypePlain = new DcImageIcon(picPath + "moduletype_other.png");
     public static final DcImageIcon _icoModuleTypeMedia = new DcImageIcon(picPath + "moduletype_media.png");
     public static final DcImageIcon _icoModuleTypeAssociate = new DcImageIcon(picPath + "moduletype_associate.png");
